--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                             Games
                                         </a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="./page2/page2.html">Call of Duty</a></li>
+                                            <li><a class="dropdown-item" href="./page2/index.html">Call of Duty</a></li>
                                             <li><a class="dropdown-item" href="#">Another action</a></li>
                                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                                         </ul>
@@ -154,7 +154,7 @@
                         <div class="style_card_body">
                             <h6 class="card-title">Call of Duty: WWII</h6>
                             <div class="col-12 text-center">
-                                <a href="./page2/page2.html" class="btn style_btn w-100">See Details</a>
+                                <a href="./page2/index.html" class="btn style_btn w-100">See Details</a>
                             </div>
                         </div>
                     </div>
@@ -230,7 +230,7 @@
                 <div class="col-4  text-center">
                     <h5 class="color_link">Developers</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="./page2/page2.html">Games</a></li>
+                        <li class="mb-2"><a href="./page2/index.html">Games</a></li>
                         <li class="mb-2"><a href="#">Windows 10</a></li>
                         <li class="mb-2"><a href="#">Creators Program</a></li>
                         <li class="mb-2"><a href="#">Designed for XBOX</a></li>
