--- a/page2/index.html
+++ b/page2/index.html
@@ -73,7 +73,7 @@
                     <p>Released on: 23/11/2017</p>
                     <div class="wrap_btn">
                         <button class="btn btn-sm style_btn col-md-5">Order Now</button>
-                        <a href="../page1.html" class="btn btn-sm style_btn col-md-5">More  Games</a>
+                        <a href="../index.html" class="btn btn-sm style_btn col-md-5">More  Games</a>
                     </div>
                 </div>
             </div>
@@ -156,7 +156,7 @@
                 <div class="col-4  text-center">
                     <h5 class="color_link">Developers</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="../page1.html">Games</a></li>
+                        <li class="mb-2"><a href="../index.html">Games</a></li>
                         <li class="mb-2"><a href="#">Windows 10</a></li>
                         <li class="mb-2"><a href="#">Creators Program</a></li>
                         <li class="mb-2"><a href="#">Designed for XBOX</a></li>
