fix size button

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 <div class="col-12 ">
                     <div class="container">
                         <div class="row">
-                            <div class="col-7"></div>
-                            <div class="col-5  text-white ">
+                            <div class="col-sm-7"></div>
+                            <div class="col-12  text-white text-center col-sm-5">
                                 <h2 class="style_title">Star Wars</h2>
                                 <h4>Battlefront II</h4>
                                 <div class="style_indent_btn pe-3">
@@ -203,13 +203,13 @@
     <section class="bg_lab">
         <div class="container style_container_lab">
             <div class="row ps-3">
-                <div class="col-6 col-sm-12">
+                <div class="col-12 col-sm-6 text-sm-start text-center">
                     <h2>Xbox Design Lab</h2>
                     <p class="mb-5">Make yours one in a billion with new colors, metallic finishes and rubberized grips.
                     </p>
                     <div>
-                        <button class="btn  style_btn bg_color col-lg-3 col-md-3">Design Yours</button>
-                        <button class="btn  style_btn  col-lg-3 col-md-3 ">Explore Consoles</button>
+                        <button class="btn  style_btn bg_color ">Design Yours</button>
+                        <button class="btn  style_btn   ">Explore Consoles</button>
                     </div>
                 </div>
             </div>
